<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SearchActivity">

    <!-- Barra de búsqueda -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"

        app:endIconMode="clear_text"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_hint"
            android:inputType="text"
            android:maxLength="100"
            android:imeOptions="actionSearch"
            android:textColorHint="@color/gray" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/version_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="1.0.0"
        android:textStyle="bold"
        android:textAlignment="textEnd"
        android:padding="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <ImageView
        android:contentDescription="Logo de open weather"
        android:src="@drawable/logo_white_cropped"
        android:padding="35dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <!-- Indicador de carga -->
    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/search_input_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- RecyclerView para mostrar los datos -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_results_rv"
        tools:visibility="gone"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/progress_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/version_name"
        tools:listitem="@layout/search_item" />

    <!-- Texto para manejar el estado vacío -->
    <TextView
        android:id="@+id/empty_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        android:text="@string/search_dont_found"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/progress_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
